--- a/android_foodwatcher/app/src/main/res/values/strings.xml
+++ b/android_foodwatcher/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">android_foodwatcher</string>
-    <string name="title_activity_maps">Lieux ou faire vos courses</string>
+    <string name="title_activity_vue_carte">Lieux ou faire vos courses</string>
     <string name="normal_map">Normal Map</string>
     <string name="hybrid_map">Hybrid Map</string>
 </resources>
