--- a/android_foodwatcher/app/src/main/res/values/strings.xml
+++ b/android_foodwatcher/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
+    <string name="menu_maison">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_map">Où faire vos courses ?</string>
