ajout de la vue d'ajout des maisons et de la vue home

--- a/android_foodwatcher/app/src/main/res/values/strings.xml
+++ b/android_foodwatcher/app/src/main/res/values/strings.xml
@@ -8,5 +8,13 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+
+    <string name="bouton_annuler">annuler</string>
+    <string name="bouton_ajouter">Ajouter</string>
+    <string name="hint_code_barre">Code barre</string>
+    <string name="hint_intitule_maison">Intitulé de la maison</string>
+    <string name="hint_quantite">Quantité</string>
+    <string name="hint_intitule_produit">Intitulé du produit</string>
+    <string name="bouton_ajouter_maison">Ajouter</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
