--- a/android_foodwatcher/app/src/main/res/values/strings.xml
+++ b/android_foodwatcher/app/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
     <string name="drawer_menu_parametre">Paramètres</string>
     <string name="drawer_menu_item_ajouter_stock">Ajouter un stock</string>
     <string name="drawer_menu_titre_rubrique_stock">Mes Stocks</string>
+
+
+    <string name="channel_name">channel_name</string>
+    <string name="channel_description">channel_description</string>
+
 </resources>
