ajout d'un menu dans la barre d'outil de ActiviteStock pour export stock

--- a/android_foodwatcher/app/src/main/res/values/strings.xml
+++ b/android_foodwatcher/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="drawer_menu_titre_rubrique_stock">Mes Stocks</string>
     <string name="channel_name">channel_name</string>
     <string name="channel_description">channel_description</string>
+    <string name="exporter_le_stock">Exporter le stock</string>
 
 </resources>
