--- a/android_foodwatcher/app/src/main/res/values/strings.xml
+++ b/android_foodwatcher/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="drawer_menu_titre_rubrique_stock">Mes Stocks</string>
     <string name="channel_name">channel_name</string>
     <string name="channel_description">channel_description</string>
-    <string name="exporter_le_stock">Exporter le stock</string>
+    <string name="activite_stock_barre_outil_item_exporter">Exporter le stock</string>
+    <string name="activite_stock_barre_outil_item_supprimer">Supprimer le stock</string>
 
 </resources>
